--- a/css/init.css
+++ b/css/init.css
@@ -2,3 +2,9 @@
     margin: 0;
     padding: 0;
 }
+
+.mask-cover{
+    background-image: url('../src/assets/coverall.png');
+    background-repeat: no-repeat;
+    background-position: 0px -570px;
+}
